--- a/TEXTME/signup.html
+++ b/TEXTME/signup.html
@@ -9,8 +9,9 @@
   
 </head>
 <body>
+    <h1>TextME!</h1>
 <div class="container-fluid">
-<!--<img src="img/envelogo.png" class="img-responsive logo">-->
+   <!--<img src="img/envelogo.png" class="img-responsive logo">-->
 <form class="form-horizontal" method="post" action="signup.php">
         <div class="form-group">
                 <label class="sr-only">Username</label>
@@ -26,6 +27,7 @@
             <label class="sr-only">Lastname</label></div><input type="text" placeholder="Last Name" name="Lastname" required="required">
     <!--<br><br>-->
     <div class="form-group">
+        <br>
             <label class="sr-only">Email</label>
     <input type="email" placeholder="E-mail" name="email" required="required"></div>
     <!--<br><br><br>-->
